Add Bottom Navigation - 하단 네비게이션 추가 - 메뉴 '캘린더'는 변동 가능성 있음.

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MMHT_my-mini-home-training</string>
     <string name="menu_home">home</string>
     <string name="menu_calendar">calendar</string>
     <string name="menu_setting">setting</string>
