--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,28 @@
 <resources>
     <string name="app_name">마미홈트 : 나의 작은 홈 트레이너</string>
+
     <string name="menu_home">홈</string>
     <string name="menu_walking">걷기</string>
     <string name="menu_setting">설정</string>
+
     <string name="home_record">일일 기록</string>
     <string name="home_calendar">달력</string>
     <string name="home_camera">카메라</string>
-    <string name="back_button">한 번 더 누르면 앱이 종료됩니다.</string>
-    <string name="record_date">"날짜 : "</string>
-    <string name="record_time">"운동 시간 : "</string>
-    <string name="record_exer">"운동 종류 : "</string>
     <string name="image_des">사용자 이미지</string>
+
+    <string name="record_date">"날짜 : "</string>
     <string name="record_date_btn">날짜 선택</string>
-    <string name="record_final_write">최종 기록 문장</string>
-    <string name="record_write_btn">오늘의 홈트 기록하기</string>
+    <string name="record_time">"운동 시간 : "</string>
     <string name="record_time_btn">운동 시간 입력</string>
+    <string name="record_time_hour_input">0</string>
+    <string name="record_time_hour">시간</string>
+    <string name="record_time_min_input">00</string>
+    <string name="record_time_min">분</string>
+    <string name="record_exer">"운동 종류 : "</string>
     <string name="record_exer_input">운동 종류를 입력하세요.</string>
+    <string name="record_write">최종 기록 문장</string>
+    <string name="record_write_btn">오늘의 홈트 기록하기</string>
+
+    <!-- java code -->
+    <string name="back_button">한 번 더 누르면 앱이 종료됩니다.</string>
 </resources>
