--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,9 @@
     <string name="record_exer">"운동 종류 : "</string>
     <string name="record_exer_input">운동 종류를 입력하세요.</string>
     <string name="record_write">최종 기록 문장</string>
-    <string name="record_write_btn">오늘의 홈트 기록하기</string>
+    <string name="record_save_btn">오늘의 홈트 기록하기</string>
 
     <!-- java code -->
     <string name="back_button">한 번 더 누르면 앱이 종료됩니다.</string>
+    <string name="record_write_btn">입력 미리보기</string>
 </resources>
