--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">마미홈트 : 나의 작은 홈 트레이너</string>
 
+    <string name="num_one">0</string>
+    <string name="num_two">00</string>
+
     <string name="menu_home">홈</string>
     <string name="menu_walking">걷기</string>
     <string name="menu_setting">설정</string>
@@ -15,9 +18,7 @@
     <string name="record_date_btn">날짜 선택</string>
     <string name="record_time">"운동 시간 : "</string>
     <string name="record_time_btn">운동 시간 입력</string>
-    <string name="record_time_hour_input">0</string>
     <string name="record_time_hour">시간</string>
-    <string name="record_time_min_input">00</string>
     <string name="record_time_min">분</string>
     <string name="record_exer">"운동 종류 : "</string>
     <string name="record_exer_input">운동 종류를 입력하세요.</string>
