--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="num_two">00</string>
 
     <string name="menu_home">홈</string>
+    <string name="menu_plan">계획</string>
     <string name="menu_walking">걷기</string>
     <string name="menu_setting">설정</string>
 
